# seccamp_riscv_cpu

./: .gitignore  .gitmodules  Makefile  README.md  build.sbt
docker/: Dockerfile
eda/: build_gowin.mk
eda/cpu_riscv_chisel_book/: Makefile  project.tcl
eda/cpu_riscv_chisel_book/src/comprocboard_9k/: .gitignore  Makefile  analyzer.rao  pins.cst  timing.sdc  top.sv
eda/cpu_riscv_chisel_book/src/sw/: Makefile  bootrom.c  link.ld
eda/cpu_riscv_chisel_book/src/sw-rs/: Cargo.toml  Makefile  link.ld
eda/cpu_riscv_chisel_book/src/sw-rs/.cargo/: config.toml
eda/cpu_riscv_chisel_book/src/sw-rs/pac/: Cargo.toml  build.rs  cpu_riscv_chisel_book.svd
eda/cpu_riscv_chisel_book/src/tangnano9k_pmod/: Makefile  iobuf_sim.sv  pins.cst  tb.sv  timing.sdc  top.sv
eda/cpu_riscv_chisel_book_hdmi/: .gitignore  Makefile  README.md  project.tcl
eda/cpu_riscv_chisel_book_hdmi/src/comprocboard_9k/: pins.cst  timing.sdc  top.sv
eda/cpu_riscv_chisel_book_hdmi/src/sw/: .gitignore  Makefile  bootrom.c  link.ld
eda/segment_display/: Makefile  project.tcl
eda/segment_display/src/: reset_seq.sv  top.sv
eda/segment_display/src/sw/: Makefile  bootrom.c  link.ld
eda/segment_display/src/sw-rs/: .gitignore  Cargo.toml  Makefile  build.rs  link.ld
eda/segment_display/src/sw-rs/.cargo/: config.toml
eda/segment_display/src/sw-rs/pac/: Cargo.toml  cpu_riscv_chisel_book.svd
eda/segment_display/src/sw-rs/pac/src/: lib.rs
eda/segment_display/src/sw-rs/src/: main.rs  uart.rs
eda/segment_display/src/tangnano20k/: pins.cst.template  timing.sdc
eda/segment_display/src/tangnano9k_pmod/: .gitignore  pins.cst.template  timing.sdc
eda/targets/: tangnano20k
eda/targets/tangnano9k_pmod/: pmod_ports.csv  target.mk
rtl/tangnano_pmod_segment_led/: TopWithSegmentLed.anno.json  TopWithSegmentLed.fir  riscv.v
slide/: lt_slide.md  slide_0_pre.md  slide_1.md
src/main/scala/common/: Const.scala  Instructions.scala
src/main/scala/cpu/: CSR.scala  Core.scala  Decoder.scala  Gpio.scala  IORegister.scala  Memory.scala  SimTop.scala  Top.scala  TopWithHDMI.scala  TopWithMultpleGpio.scala  TopWithSegmentLed.scala
src/main/scala/diag/: README.md  probe.scala
src/main/scala/display/: matrix_led.scala
src/main/scala/fpga/: comproc_cpu_board.scala  tangnano_pmod.scala
src/main/scala/gowin/: dpb.scala  oser10.scala
src/main/scala/memory/: generic.scala  port.scala
src/main/scala/segled/: multi_segment_led.scala
src/main/scala/uart/: UartRx.scala  UartTx.scala
src/main/scala/video/: dvi_out.scala  dvi_out_gowin.scala  simple_tpg.scala  test_pattern.scala  video.scala  video_controller.scala
src/test/scala/cpu/: riscv-test.scala  top.scala
src/test/scala/diag/: README.md  probe.scala
src/test/scala/video/: dvi_out.scala
tool/fwtool/: Cargo.toml
tool/fwtool/cli/: Cargo.toml
tool/fwtool/cli/src/: main.rs
tool/fwtool/fwtool/: Cargo.toml
tool/fwtool/fwtool/src/: client.rs  frame.rs  lib.rs  receiver.rs  server.rs
tool/probedec/: .gitignore  Cargo.toml  README.md
tool/probedec/src/: main.rs
(+7 files in other folders)
