[package]
name = "probedec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
bytes = "1.4.0"
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
futures = "0.3.28"
log = { version = "0.4.19", features = ["std"] }
tokio = { version = "1.29.1", features = ["rt", "macros", "full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
