[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
features = "0.10.0"
log = "0.4.19"

fwtool = { path = "../fwtool", features = ["std", "alloc"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
async-stream = "0.3.5"
anyhow = "1.0.72"
tokio = { version = "1.30.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["rt", "libudev"] }
