[package]
name = "fwtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "alloc"]
test = ["no_std_io/std", "no_std_io/alloc"]
std = ["no_std_io/std", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:async-stream"]
alloc = ["no_std_io/alloc"]

[dependencies]
crc = "3.0.1"
no_std_io = "0.6.0"
tokio = { version = "1.29.1", features = ["full"], optional = true }
tokio-stream = { version = "0.1.14", features = ["full"], optional = true }
tokio-util = { version = "0.7.8", features = ["full"], optional = true }
async-stream = { version = "0.3.5", optional = true }
